src/objects/Community_User_Timezone__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Community User Timezone</label>
</CustomObject>